new articles added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="technology">
+      <div class="headline">Black Mirror hottest Netflix Show of the Summer</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="https://randomuser.me/api/portraits/lego/2.jpg" />
+        </div>
+        <span>By E.B. D Navigator</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="javascript">
       <div class="headline">Type Coercion: Why Does NaN !== NaN? and Other Strange Occurrences</div>
       <div class="author">
@@ -102,6 +112,16 @@
         <span>By MAX GOODBOYE</span>
       </div>
     </div>
+
+    <div class="card" data-tab="technology">
+        <div class="headline">Battle of Boostrap vs Vanilla Css</div>
+        <div class="author">
+          <div class="img-container">
+            <img src="https://randomuser.me/api/portraits/lego/2.jpg" />
+          </div>
+          <span>By E.B. D Navigator</span>
+        </div>
+      </div>
 
     <div class="card" data-tab="jquery">
       <div class="headline">History of Javascript Libraries: from jQuery to React</div>
