changed profile image

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="headline">Black Mirror hottest Netflix Show of the Summer</div>
       <div class="author">
         <div class="img-container">
-          <img src="https://randomuser.me/api/portraits/lego/2.jpg" />
+          <img src="https://i.pravatar.cc" />
         </div>
         <span>By E.B. D Navigator</span>
       </div>
@@ -117,7 +117,7 @@
         <div class="headline">Battle of Boostrap vs Vanilla Css</div>
         <div class="author">
           <div class="img-container">
-            <img src="https://randomuser.me/api/portraits/lego/2.jpg" />
+            <img src="https://i.pravatar.cc" />
           </div>
           <span>By E.B. D Navigator</span>
         </div>
